--- a/authenticate-me/frontend/package.json
+++ b/authenticate-me/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "colorthief": "^2.3.2",
+    "get-image-colors": "^4.0.0",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
