--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
     "dev:backend": "npm install --prefix backend start",
     "dev:frontend": "npm install --prefix frontend start",
-    "sequelize": "npm run --prefix backend sequelize",
-    "sequelize-cli": "npm run sequelize-cli",
+    "sequelize-cli": "npx run --prefix backend sequelize-cli",
     "start": "npm start --prefix backend"
   },
   "keywords": [],
