--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleverse",
+  "name": "authenticate-me",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,12 @@
     "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
     "dev:backend": "npm install --prefix backend start",
     "dev:frontend": "npm install --prefix frontend start",
-    "sequelize-cli": "npx run --prefix backend sequelize-cli",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
     "start": "npm start --prefix backend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
-  }
+  "dependencies": {}
 }
